updating infra settings